@@ -5,6 +5,10 @@ Changelog
 4.2.0 (unreleased)
 ------------------
 
+- Style protocol view in opengever.meeting.
+  Implement sticky headings and autosize textareas.
+  [Kevin Bieri]
+
 - Meeting listing improvements:
     - Disable selection links for listins without checkbox column.
     - Extend proposal listing columns.
